[tool.poetry]
name = "eaf"
version = "0.1.0"
description = "Enterprise Application Framework"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
pylint = "^2.4.4"
pytest-pylint = "^0.15.1"
mypy = "^0.761"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
