[tool.poetry]
name = "eaf"
version = "0.1.5"
description = "Enterprise Application Framework"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/pkulev/eaf"
homepage = "https://github.com/pkulev/eaf"

keywords = ["application", "framework"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"
pytest-mypy = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
pylint = "^2.4.4"
pytest-pylint = "^0.15.1"
mypy = "^0.761"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
